fix: typewriter layout shifts on long sentences

--- a/src/components/TypeWriter/TypeWriter.module.scss
+++ b/src/components/TypeWriter/TypeWriter.module.scss
@@ -1,15 +1,22 @@
 .typewriter {
 	position: relative;
 	min-height: 96px;
+	display: flex;
+	align-items: center;
 
-	&::after {
+	> p {
+		text-align: center;
+		width: 100%;
+	}
+
+	> p::after {
 		content: "|";
 		display: inline-block;
 		margin-inline-start: 1px;
 		position: absolute;
 	}
 
-	&[data-writing="false"]::after {
+	> p[data-writing="false"]::after {
 		animation: blink-caret 1s step-end infinite;
 	}
 }
@@ -26,6 +33,7 @@
 
 @media screen and (max-width: 700px) {
 	.typewriter {
-		max-width: auto;
+		max-width: 100%;
+		height: 120px;
 	}
 }
